Cookie banner on zeit.de can't be handled via click rule
Categories
(Core :: Privacy: Anti-Tracking, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox108 | --- | fixed |
People
(Reporter: emz, Assigned: emz)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
The problem seems to be that the visibility check for the cookie banner button returns false
here initially: https://searchfox.org/mozilla-central/rev/4e695325c5cfc6a37f271b98672f9c03252b1f6f/toolkit/components/cookiebanners/CookieBannerChild.jsm#233
and we don't get a MutationObserver
callback when the visibility changes.
Here is the rule I've used to test this:
{
"click": {
"optIn": ".sp_choice_type_11",
"presence": ".sp_choice_type_11"
},
"domain": "*",
"cookies": {},
"id": "4e6b1f68-9977-43bb-bc71-be310f99001d"
}
Updated•3 years ago
|
Assignee | ||
Comment 2•3 years ago
|
||
This allows us to disable the visibility check for certain rules - edge cases
where the cookie banner is hidden initially and the MutationObserver in
CookieBannerChild does not pick up on visibility changes.
This can happen because we are in an iframe and the frame itself changes in
visibility.
Updated•3 years ago
|
Assignee | ||
Comment 3•3 years ago
|
||
Depends on D160649
Comment 5•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/5c1ba6aae6af
https://hg.mozilla.org/mozilla-central/rev/8324b03edbae
Description
•